# Netwatch

./: .gitignore  Dockerfile.capture  README.md  docker-compose.yml  env.example  network-traffic-analyzer-design.md  package-lock.json  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts  websocket.ts
frontend/src/hooks/: useAlerts.ts  useFlows.ts  useGraph.ts  useStats.ts
frontend/src/store/: alertStore.ts
frontend/src/styles/: globals.css  theme.css
netwatch/backend/: config.py  main.py  metrics.py  models.py  pipeline.py
netwatch/backend/aggregation/: __init__.py  aggregator.py  flow_tracker.py  models.py  time_window.py
netwatch/backend/api/: main.py  serializers.py  ws_manager.py
netwatch/backend/capture/: __init__.py  filter.py  parser.py  sniffer.py
netwatch/backend/engine/: __init__.py  engine.py  models.py
netwatch/backend/llm/: __init__.py  cache.py  client.py  fallbacks.py  gatekeeper.py  models.py  prompt_builder.py  validator.py
netwatch/backend/storage/: __init__.py  database.py  migrations.py  repository.py
netwatch/backend/tests/: test_aggregator.py  test_api.py  test_cache.py  test_config.py  test_engine.py  test_filter.py  test_flow_tracker.py  test_gatekeeper.py  test_graph.py  test_migrations.py  test_new_rules.py  test_parser.py  test_pipeline.py  test_port_scan.py  test_prompt_builder.py  test_repository.py  test_sniffer.py  test_syn_flood.py  test_time_window.py  test_validator.py  (+1 more)
(+40 files in other folders)
